src/test/ui/type/type-path-err-node-types-2.stderr
error[E0282]: type annotations needed
  --> $DIR/type-path-err-node-types-2.rs:7:14
   |
LL |     let _ = |a, b: _| -> _ { 0 };
   |              ^ consider giving this closure parameter a type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
